--- a/hotel/public/css/bar.css
+++ b/hotel/public/css/bar.css
@@ -99,7 +99,7 @@
 
 /* ----------Download------------ */
 .download{
-    background-color: aqua;
+    background-color: yellowgreen;
 }
 
 /* -------------Scroll---------------- */
