--- a/hotel/public/css/index.css
+++ b/hotel/public/css/index.css
@@ -217,3 +217,16 @@ p {
         font-size: 16px;
     }
 }
+
+@media only screen and (max-width: 576px) {
+    h5 {
+        font-size: 20px !important;
+    }
+    h1, h2{ 
+        font-size: 30px !important;
+    }
+    p {
+        font-size: 12px !important;
+    }
+  
+}
