--- a/hotel/public/css/bar.css
+++ b/hotel/public/css/bar.css
@@ -1,4 +1,3 @@
-
 .container-fluid {
     padding: 0;
     display: flex;
@@ -23,10 +22,9 @@
     background-color: #000;
 }
 
-.container-fluid section:nth-child(1) .image{
+.container-fluid section:nth-child(1) .image {
     background-image: url(../images/bar/bar.jpeg);
 }
-
 
 .container-fluid section .image {
     background-attachment: fixed;
@@ -63,7 +61,7 @@
     font-size: 20px;
 }
 
-.container-fluid section .stuff h1:after{
+.container-fluid section .stuff h1:after {
     width: 100%;
     height: 1px;
     display: block;
@@ -73,23 +71,25 @@
 }
 
 /* --------------Main-------------- */
+
 .main img {
     border-radius: 2px;
     transition: all .25s linear;
     box-shadow: -1px 10px 29px 0px rgba(0, 0, 0, 0.8);
 }
 
-.main h1, p, .desserts h1, p, .drinks h1, p{
+.main h1, p, .desserts h1, p, .drinks h1, p {
     text-align: center;
 }
 
-.main h1 span, .desserts h1 span, .drinks h1 span   {
+.main h1 span, .desserts h1 span, .drinks h1 span {
     font-size: 30px;
     color: #4285F4;
 }
 
 /* -----------Desserts------------ */
-.desserts img, .drinks img{
+
+.desserts img, .drinks img {
     width: 100%;
     height: 40vh;
     border-radius: 2px;
@@ -98,7 +98,8 @@
 }
 
 /* ----------Download------------ */
-.download{
+
+.download {
     background-color: aqua;
 }
 
@@ -161,5 +162,30 @@
     100% {
         opacity: 1;
         -webkit-transform: translateY(0%);
+    }
+}
+
+/*---------------Media 992px------------ */
+
+@media only screen and (max-width: 992px) {
+    .desserts img, .drinks img {
+        height: 50vh;
+    }
+    .container-fluid section .stuff h1 {
+        font-size: 50px;
+    }
+    .container-fluid section .stuff p {
+        font-size: 15px;
+    }
+}
+
+/*---------------Media 576px------------ */
+
+@media only screen and (max-width: 576px) {
+    .container-fluid section {
+        height: 80vh;
+    }
+    .desserts img, .drinks img {
+        height: 30vh;
     }
 }
