--- a/hotel/public/css/index.css
+++ b/hotel/public/css/index.css
@@ -6,6 +6,29 @@ p {
     font-family: 'Rajdhani', sans-serif;
 }
 
+/*-----------Navbar-------------*/
+.sticky-wrapper{
+    height: 1px !important;
+}
+.sticky.is-sticky {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+}
+
+nav {
+    background: #eaebec;
+}
+
+.navbar a {
+    font-family: 'Acme', sans-serif;
+}
+
+/* -----------Welcome------------- */
+
 .checking form label {
     font-family: 'Yanone Kaffeesatz', sans-serif;
     font-size: 20px;
@@ -18,6 +41,7 @@ p {
 
 .welcome p {
     font-size: 20px;
+    text-align: unset;
 }
 
 .welcome img {
@@ -110,49 +134,92 @@ p {
     color: #4285F4!important;
 }
 
-.dining-bar .tab-content img{
+.dining-bar .tab-content img {
     border-radius: 2px;
     transition: all .25s linear;
     box-shadow: -1px 10px 29px 0px rgba(0, 0, 0, 0.8);
 }
 
-.dining-bar .tab-content h1 span{
+.dining-bar .tab-content h1 span {
     font-size: 30px;
     color: #4285F4;
 }
 
 /* -------------Map------------------- */
-.map{
+
+.map {
     height: 100vh;
 }
 
-.map .container-fluid{
-    padding:0;
+.map .container-fluid {
+    padding: 0;
 }
 
-.map .container-fluid iframe{
+.map .container-fluid iframe {
     height: 100vh;
 }
 
 /* -------------Scroll---------------- */
-.scrollToTop{
-    width:100px; 
-    height:130px;
-    padding:10px; 
-    text-align:center; 
+
+.scrollToTop {
+    width: 100px;
+    height: 130px;
+    padding: 10px;
+    text-align: center;
     font-weight: bold;
-    font-size:36px;
+    font-size: 36px;
     color: #4285F4;
     text-decoration: none;
-    position:fixed;
-    top:500px;
-    right:10px;
-    display:none;
-}
-.scrollToTop:hover{
-    text-decoration:none;
+    position: fixed;
+    top: 500px;
+    right: 10px;
+    display: none;
 }
 
+.scrollToTop:hover {
+    text-decoration: none;
+}
+
+/* ------------Slideanim-------------- */
+
+.slideanim {
+    visibility: hidden;
+}
+
+.slide {
+    /* The name of the animation */
+    animation-name: slide;
+    -webkit-animation-name: slide;
+    /* The duration of the animation */
+    animation-duration: 1s;
+    -webkit-animation-duration: 1s;
+    /* Make the element visible */
+    visibility: visible;
+}
+
+/* Go from 0% to 100% opacity (see-through) and specify the percentage from when to slide in the element along the Y-axis */
+
+@keyframes slide {
+    0% {
+        opacity: 0;
+        transform: translateY(70%);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0%);
+    }
+}
+
+@-webkit-keyframes slide {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateY(70%);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateY(0%);
+    }
+}
 
 /* -------------Media 1200------------ */
 
@@ -165,5 +232,17 @@ p {
     }
     .welcome p {
         font-size: 16px;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    h5 {
+        font-size: 20px !important;
+    }
+    h1, h2 {
+        font-size: 30px !important;
+    }
+    p {
+        font-size: 12px !important;
     }
 }
